# Atlas

./: CHANGELOG.md  DEVELOPER_GUIDE.md  README.md  pyproject.toml
.github/: FUNDING.yml
Atlas/examples/: quickstart.py
Atlas/outputs/: quickstart_graph.html  quickstart_report.md
Atlas/src/atlas/: __init__.py  types.py
Atlas/src/atlas_framework.egg-info/: PKG-INFO  SOURCES.txt
examples/: example01.py  example02.py  example03.py  example04.py  example05.py  minimal.py  prac01.py  quickstart.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
outputs/: example01.html  example02.html  example04.html  example05.html  minimal_graph.html  quickstart_graph.html  quickstart_report.md
src/atlas/: __init__.py  types.py
src/atlas/ingest/: __init__.py  basic.py
src/atlas/viz/: __init__.py  pyvis_viz.py  visualizer.py
src/atlas_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
