
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-framework"
version = "0.1.0"
description = "Atlas: Python Knowledge-Network Framework (papers–code–datasets as a graph)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Han Jungwoo", email="example@example.com"}]
dependencies = [
    "networkx>=3.1",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "gitpython>=3.1",
    "pyvis>=0.3.2",
    "pandas>=2.0",
    "plotly>=5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlas*"]
