
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Atlas-framework"
version = "0.3.0"
description = "Atlas: Python Research Network Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name="Han Jungwoo", email="jwhan00427@gmail.com"}]
dependencies = [
    "networkx>=3.1",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "gitpython>=3.1",
    "pyvis>=0.3.2",
    "pandas>=2.0",
    "plotly>=5.0"
    "requests"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlas*"]
